# iroh-c-ffi

./: .gitignore  meson.build
subprojects/: meson-cargo-1.wrap
